fixing font issue on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -51,15 +51,6 @@ body {
   padding-right: 30px;
 }
 
-.vertical-centered {
-  position: absolute;
-  top: 10%;
-  -webkit-transform: translateY(-10%);
-  -moz-transform: translateY(-10%);
-  -ms-transform: translateY(-10%);
-  -o-transform: translateY(-10%);
-  transform: translateY(-10%);
-}
 
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -200,7 +191,7 @@ h3 { font-size: 28px; font-size: 2.8rem; line-height: 1.3;  letter-spacing: .1re
 }
 
 #pricing h2 {
-  font-family: DroidSans-Bold;
+  font-family: "DroidSans-Bold";
   font-size: 64px;
   color: #FFFFFF;
   line-height: 64px;
@@ -208,7 +199,7 @@ h3 { font-size: 28px; font-size: 2.8rem; line-height: 1.3;  letter-spacing: .1re
 }
 
 #pricing h3 {
-  font-family: DroidSans;
+  font-family: "DroidSans";
   font-size: 22px;
   color: #FFFFFF;
   line-height: 24px;
@@ -216,7 +207,7 @@ h3 { font-size: 28px; font-size: 2.8rem; line-height: 1.3;  letter-spacing: .1re
 }
 
 #pricing ul {
-  font-family: DroidSans;
+  font-family: "DroidSans";
   font-size: 15px;
   color: #2C2334;
   line-height: 20px;
@@ -225,7 +216,7 @@ h3 { font-size: 28px; font-size: 2.8rem; line-height: 1.3;  letter-spacing: .1re
 
 
 #pricing .header p {
-  font-family: DroidSans;
+  font-family: "DroidSans";
   font-size: 12px;
   color: #FFFFFF;
   line-height: 14px;
@@ -246,6 +237,7 @@ h3 { font-size: 28px; font-size: 2.8rem; line-height: 1.3;  letter-spacing: .1re
   border-top-right-radius: 8px;
   border-top-left-radius: 8px;
   padding: 20px;
+  font-family: "DroidSans";
 }
 
 #pricing .header-premium h2 {
